# online-eks-cross-az

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  pyproject.toml
src/online_eks_cross_az/: __init__.py  cli.py  cloudformation.yaml  lib.py  query.sql
src/quick_eks_cross_az/: __init__.py  cli.py  lib.py
src/test/: lib.py
